# pqc-tracing-bot

./: .gitignore  README.md
config/: dw3b.toml  dw3b.yaml  (+2 more)
futures-measurement-bot/: Cargo.toml  README.md
futures-measurement-bot/src/: buckets.rs  events.rs  lib.rs  types.rs
futures-measurement-bot/src/audit/: mod.rs  qsdg.rs  tuplechain.rs
futures-measurement-bot/src/execution/: autheo.rs  mod.rs  trading_station.rs
futures-measurement-bot/src/metrics/: engine.rs  stats.rs
futures-measurement-bot/src/strategy/: distressed_position_rescue.rs  mod.rs  open_ma_trend.rs
futures-measurement-bot/tests/: metrics.rs
futures-measurement-bot/web-ui/: app.js  index.html  style.css
futures-measurement-bot/web-ui/wasm/: README.txt
pqcnet-contracts/: Cargo.toml  README.md
pqcnet-contracts/.cargo/: config.toml
pqcnet-contracts/autheo-dw3b-mesh/: Cargo.toml  README.md
pqcnet-contracts/autheo-dw3b-mesh/examples/: dw3b_walkthrough.rs
pqcnet-contracts/autheo-dw3b-mesh/src/: bloom.rs  chaos.rs  compression.rs  config.rs  engine.rs  entropy.rs  lib.rs  mesh.rs  noise.rs  types.rs
pqcnet-contracts/autheo-dw3b-mesh/tests/: mesh.rs
pqcnet-contracts/autheo-dw3b-overlay/: Cargo.toml  README.md
pqcnet-contracts/autheo-dw3b-overlay/examples/: loopback_overlay.rs
pqcnet-contracts/autheo-dw3b-overlay/src/: config.rs  error.rs  grapplang.rs  lib.rs  overlay.rs  rpc.rs  transport.rs
pqcnet-contracts/autheo-dw3b-overlay/tests/: overlay.rs
pqcnet-contracts/autheo-entropy-core/: README.md
pqcnet-contracts/autheo-entropy-wasm/: Cargo.toml  README.md
pqcnet-contracts/autheo-entropy-wasm/src/: lib.rs
pqcnet-contracts/autheo-mldsa-dilithium/: Cargo.toml  README.md
pqcnet-contracts/autheo-mldsa-dilithium/src/: deterministic.rs  lib.rs  liboqs.rs  types.rs
pqcnet-contracts/autheo-mldsa-falcon/: Cargo.toml  README.md
pqcnet-contracts/autheo-mldsa-falcon/src/: deterministic.rs  lib.rs  liboqs.rs  types.rs
pqcnet-contracts/autheo-mldsa-falcon/wasm-demo/: Fndsa.html  qies_fndsa.js
pqcnet-contracts/autheo-mlkem-kyber/: Cargo.toml  README.md
pqcnet-contracts/autheo-mlkem-kyber/src/: deterministic.rs  lib.rs  liboqs.rs  types.rs
pqcnet-contracts/autheo-mlkem-kyber/wasm-demo/: README.md  package.json  qies_kyber_bg.wasm
pqcnet-contracts/autheo-pqc-core/: Cargo.toml  README.md  build.rs
pqcnet-contracts/autheo-pqc-core/data/: qfkh_prod_trace.json
pqcnet-contracts/autheo-pqc-core/examples/: handshake_demo.rs  qace_sim.rs  qstp_mesh_sim.rs  qstp_performance.rs
pqcnet-contracts/autheo-pqc-core/src/: adapters.rs  dsa.rs  error.rs  fallback.rs  handshake.rs  kem.rs  key_manager.rs  lib.rs  liboqs.rs  qace.rs  qs_dag.rs  qstp.rs  runtime.rs  secret_sharing.rs  signatures.rs  types.rs
pqcnet-contracts/autheo-pqc-core/tests/: examples.rs
pqcnet-contracts/autheo-pqc-wasm/: Cargo.toml  README.md  build.rs
pqcnet-contracts/autheo-pqc-wasm/src/: lib.rs
pqcnet-contracts/autheo-pqcnet-5dezph/: Cargo.toml  README.md
pqcnet-contracts/autheo-pqcnet-5dezph/examples/: ezph_walkthrough.rs  warm_halo2.rs
pqcnet-contracts/autheo-pqcnet-5dezph/src/: chaos.rs  config.rs  error.rs  fhe.rs  lib.rs  manifold.rs  pipeline.rs  privacy.rs  zk.rs
pqcnet-contracts/autheo-pqcnet-5dezph/tests/: pipeline.rs
pqcnet-contracts/autheo-pqcnet-5dqeh/: Cargo.toml  README.md
pqcnet-contracts/autheo-pqcnet-5dqeh/examples/: coherence_walkthrough.rs  host_entropy_demo.rs
pqcnet-contracts/autheo-pqcnet-5dqeh/src/: entropy.rs  lib.rs  pqc.rs
pqcnet-contracts/autheo-pqcnet-chronosync/: Cargo.toml  README.md
pqcnet-contracts/autheo-pqcnet-chronosync/examples/: chronosync_sim.rs  scaling_probe.rs
pqcnet-contracts/autheo-pqcnet-chronosync/src/: entropy.rs  keeper.rs  lib.rs
pqcnet-contracts/autheo-pqcnet-chronosync/tests/: chronosync.rs
pqcnet-contracts/autheo-pqcnet-hqc/: Cargo.toml  README.md
pqcnet-contracts/autheo-pqcnet-hqc/src/: lib.rs  liboqs.rs  types.rs
pqcnet-contracts/autheo-pqcnet-icosuple/: Cargo.toml  README.md
pqcnet-contracts/autheo-pqcnet-icosuple/examples/: icosuple_sim.rs
pqcnet-contracts/autheo-pqcnet-icosuple/src/: lib.rs
pqcnet-contracts/autheo-pqcnet-icosuple/tests/: icosuple.rs
pqcnet-contracts/autheo-pqcnet-qrng/: Cargo.toml  README.md
pqcnet-contracts/autheo-pqcnet-qrng/examples/: qrng_demo.rs
pqcnet-contracts/autheo-pqcnet-qrng/src/: feed.rs  lib.rs
pqcnet-contracts/autheo-pqcnet-qrng/tests/: qrng.rs
pqcnet-contracts/autheo-pqcnet-sphincs/: Cargo.toml  README.md
pqcnet-contracts/autheo-pqcnet-sphincs/src/: deterministic.rs  lib.rs  liboqs.rs  types.rs
pqcnet-contracts/autheo-pqcnet-tuplechain/: Cargo.toml  README.md
pqcnet-contracts/autheo-pqcnet-tuplechain/examples/: tuplechain_sim.rs
pqcnet-contracts/autheo-pqcnet-tuplechain/src/: lib.rs
pqcnet-contracts/autheo-privacynet/: Cargo.toml  README.md
pqcnet-contracts/autheo-privacynet-network-overlay/: Cargo.toml  README.md
pqcnet-contracts/configs/: chronosync-shards.toml  pqcnet-relayer.toml  pqcnet-relayer.yaml  pqcnet-sentry.toml  pqcnet-sentry.yaml
pqcnet-contracts/docs/: README.md  depinn-overlay.md  pqcnet-architecture-integration.md  pqcnet-config-schema.md  pqcnet-demo-progress.md  pqcnet-deployment-governance.md  qrng-hardware-roadmap.md  qstp-performance.md  qstp.md
pqcnet-contracts/pqcnet-crypto/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-entropy/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-networking/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-qace/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-qfkh/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-qs-dag/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-qstp/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-relayer/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-sentry/: Cargo.toml  README.md
pqcnet-contracts/pqcnet-telemetry/: Cargo.toml  README.md
pqcnet-contracts/protos/: pqcnet_5dqeh.proto  qstp.proto
pqcnet-contracts/quantum/: chsh_sandbox.py  ezph_pipeline.py  requirements.txt
pqcnet-contracts/src/: dsa.rs  handshake.rs  kem.rs  key_manager.rs  lib.rs  signatures.rs  wasm.rs
(+91 files in other folders)
