[package]
name = "futures-measurement-bot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Futures trading measurement bot built on PQCNet (QSTP/QS-DAG/TupleChain)."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
dashmap = "6"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"
hdrhistogram = "7"
async-trait = "0.1"
blake3 = "1.5"

# Demo web UI (static HTML + WS relay)
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

# PQCNet / Autheo
pqcnet-telemetry = { path = "../pqcnet-contracts/pqcnet-telemetry", default-features = false, features = ["dev"] }
pqcnet-qs-dag = { path = "../pqcnet-contracts/pqcnet-qs-dag" }
autheo-pqcnet-tuplechain = { path = "../pqcnet-contracts/autheo-pqcnet-tuplechain" }
pqcnet-qstp = { path = "../pqcnet-contracts/pqcnet-qstp" }

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"
