[workspace]
members = [
    "autheo-mlkem-kyber",
    "autheo-mldsa-dilithium",
    "autheo-mldsa-falcon",
    "autheo-pqc-core",
    "autheo-pqc-wasm",
    "pqcnet-crypto",
    "pqcnet-networking",
    "pqcnet-telemetry",
    "pqcnet-sentry",
    "pqcnet-relayer",
    "pqcnet-qace", "pqcnet-qs-dag", "pqcnet-qstp", "pqcnet-qfkh",
]
resolver = "2"

[patch.crates-io]
home = { path = "vendor/home-0.5.5" }
