[workspace]
members = [
    "autheo-mlkem-kyber",
    "autheo-mldsa-dilithium",
    "autheo-mldsa-falcon",
    "autheo-pqc-core",
    "autheo-pqc-wasm",
    "autheo-pqcnet-tuplechain",
    "autheo-pqcnet-chronosync",
    "autheo-pqcnet-icosuple",
    "autheo-pqcnet-qrng",
    "autheo-pqcnet-5dqeh",
    "autheo-pqcnet-5dezph",
    "pqcnet-crypto",
    "pqcnet-networking",
    "pqcnet-telemetry",
    "pqcnet-sentry",
    "pqcnet-relayer",
    "pqcnet-qace",
    "pqcnet-qs-dag",
    "pqcnet-qstp",
    "pqcnet-qfkh",
    "pqcnet-entropy",
    "autheo-entropy-wasm",
    "autheo-privacynet",
    "autheo-privacynet-network-overlay",
    "autheo-dw3b-mesh",
    "autheo-dw3b-overlay",
]
resolver = "2"

[patch.crates-io]
home = { path = "vendor/home-0.5.5" }
