[package]
name = "autheo-dw3b-mesh"
version = "0.1.0"
edition = "2021"
description = "DW3B mesh engine orchestrating privacy primitives, mixnet routing, and anonymization proofs"
license = "Apache-2.0"

[dependencies]
autheo-privacynet = { path = "../autheo-privacynet" }
autheo-pqcnet-5dezph = { path = "../autheo-pqcnet-5dezph" }
autheo-pqcnet-5dqeh = { path = "../autheo-pqcnet-5dqeh" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
rand_distr = "0.4"
blake3 = "1.5"
hex = "0.4"
toml = "0.8"
zstd = { version = "0.13", default-features = false, features = ["legacy"] }
bitvec = "1.0"
once_cell = "1.19"
tracing = "0.1"
