[package]
name = "autheo-dw3b-overlay"
version = "0.1.0"
edition = "2021"
description = "Dark Web Privacy Network (DW3B) overlay facade wrapping the DW3B mesh engine with QSTP transports and Grapplang hooks"
license = "Apache-2.0"

[dependencies]
autheo-dw3b-mesh = { path = "../autheo-dw3b-mesh" }
autheo-pqcnet-5dqeh = { path = "../autheo-pqcnet-5dqeh" }
autheo-pqc-core = { path = "../autheo-pqc-core" }
pqcnet-networking = { path = "../pqcnet-networking" }
pqcnet-qstp = { path = "../pqcnet-qstp" }
pqcnet-telemetry = { path = "../pqcnet-telemetry" }
pqcnet-crypto = { path = "../pqcnet-crypto" }
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
blake3 = "1.5"
tracing = "0.1"
shell-words = "1.1"

[features]
default = []
real_zk = ["autheo-dw3b-mesh/real_zk"]
