[package]
name = "autheo-pqc-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
liboqs = ["dep:oqs"]

[dependencies]
autheo-mlkem-kyber = { path = "../autheo-mlkem-kyber" }
autheo-mldsa-dilithium = { path = "../autheo-mldsa-dilithium" }
autheo-mldsa-falcon = { path = "../autheo-mldsa-falcon" }
blake2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
oqs = { version = "0.8", optional = true, default-features = false, features = ["kyber", "dilithium", "std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
shamir = "2.0"

[[bin]]
name = "liboqs_cli"
path = "src/bin/liboqs_cli.rs"
required-features = ["liboqs"]
