[package]
name = "autheo-pqc-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["real_data"]
liboqs = ["dep:oqs"]
real_data = []

[dependencies]
autheo-mlkem-kyber = { path = "../autheo-mlkem-kyber" }
autheo-mldsa-dilithium = { path = "../autheo-mldsa-dilithium" }
autheo-mldsa-falcon = { path = "../autheo-mldsa-falcon" }
pqcnet-qace = { path = "../pqcnet-qace" }
pqcnet-qs-dag = { path = "../pqcnet-qs-dag" }
blake2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
oqs = { version = "0.8", optional = true, default-features = false, features = ["kyber", "dilithium", "std"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hex-literal = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
shamir = "2.0"

[[bin]]
name = "liboqs_cli"
path = "src/bin/liboqs_cli.rs"
required-features = ["liboqs"]

[build-dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
