[package]
name = "autheo-pqcnet-5dezph"
version = "0.1.0"
edition = "2021"
description = "Five-Dimensional Entangled Zero-Knowledge Privacy Hypergraph orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
autheo-pqcnet-5dqeh = { path = "../autheo-pqcnet-5dqeh" }
pqcnet-entropy = { path = "../pqcnet-entropy" }
blake3 = "1.5"
halo2_proofs = "0.3"
halo2curves = "0.6"
parking_lot = "0.12"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tfhe = { version = "0.7", features = ["shortint"] }
thiserror = "1.0"
statrs = "0.16"

[dev-dependencies]
anyhow = "1.0"
approx = "0.5"
