[package]
name = "autheo-pqcnet-5dqeh"
version = "0.1.0"
edition = "2021"
description = "5D-QEH hypergraph primitives, simulation harnesses, and entanglement guards for Autheo PQCNet"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
sim = ["pqcnet-entropy/sim"]

 [dependencies]
 blake3 = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
pqcnet-entropy = { path = "../pqcnet-entropy" }
