[package]
name = "autheo-pqcnet-5dqeh"
version = "0.1.0"
edition = "2021"
description = "5D-QEH hypergraph primitives, simulation harnesses, and entanglement guards for Autheo PQCNet"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
sim = ["pqcnet-entropy/sim"]

[dependencies]
autheo-pqc-core = { path = "../autheo-pqc-core" }
blake3 = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
pqcnet-entropy = { path = "../pqcnet-entropy" }

[[example]]
name = "coherence_walkthrough"
path = "examples/coherence_walkthrough.rs"
required-features = ["sim"]

[[example]]
name = "host_entropy_demo"
path = "examples/host_entropy_demo.rs"
required-features = ["sim"]
