[package]
name = "autheo-pqcnet-chronosync"
version = "0.1.0"
edition = "2021"
description = "Chronosync QS-DAG keeper and telemetry bridge for Autheo PQCNet"
license = "Apache-2.0"

[dependencies]
autheo-pqcnet-5dqeh = { path = "../autheo-pqcnet-5dqeh" }
blake3 = "1.5"
pqcnet-qs-dag = { path = "../pqcnet-qs-dag" }
pqcnet-networking = { path = "../pqcnet-networking" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
