[package]
name = "autheo-pqcnet-chronosync"
version = "0.1.0"
edition = "2021"
description = "Chronosync QS-DAG keeper and telemetry bridge for Autheo PQCNet"
license = "Apache-2.0"

[dependencies]
autheo-pqcnet-5dqeh = { path = "../autheo-pqcnet-5dqeh" }
autheo-pqcnet-qrng = { path = "../autheo-pqcnet-qrng" }
blake3 = "1.5"
pqcnet-networking = { path = "../pqcnet-networking" }
pqcnet-qs-dag = { path = "../pqcnet-qs-dag" }
pqcnet-telemetry = { path = "../pqcnet-telemetry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
autheo-pqcnet-tuplechain = { path = "../autheo-pqcnet-tuplechain" }
