[package]
name = "autheo-pqcnet-icosuple"
version = "0.1.0"
edition = "2021"
description = "Icosuple n-tier network simulator for Autheo PQCNet"
license = "Apache-2.0"

[dependencies]
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
