[package]
name = "autheo-pqcnet-icosuple"
version = "0.1.0"
edition = "2021"
description = "Autheo PQCNet hyper-tuple production module wired into Chronosync and TupleChain"
license = "Apache-2.0"

[dependencies]
autheo-pqcnet-chronosync = { path = "../autheo-pqcnet-chronosync" }
autheo-pqcnet-tuplechain = { path = "../autheo-pqcnet-tuplechain" }
autheo-pqcnet-5dqeh = { path = "../autheo-pqcnet-5dqeh" }
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
