[package]
name = "autheo-pqcnet-tuplechain"
version = "0.1.0"
edition = "2021"
description = "TupleChain semantic ledger primitives for Autheo PQCNet"

[features]
default = []
sim = ["rand"]

[dependencies]
blake3 = "1.5"
rand = { version = "0.8", features = ["std", "std_rng"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
