[package]
name = "autheo-pqcnet-tuplechain"
version = "0.1.0"
edition = "2021"
description = "TupleChain semantic ledger primitives for Autheo PQCNet"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
