[package]
name = "autheo-privacynet-network-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
autheo-privacynet = { path = "../autheo-privacynet" }
autheo-pqcnet-5dqeh = { path = "../autheo-pqcnet-5dqeh" }
autheo-pqc-core = { path = "../autheo-pqc-core" }
pqcnet-networking = { path = "../pqcnet-networking" }
pqcnet-qstp = { path = "../pqcnet-qstp" }
pqcnet-telemetry = { path = "../pqcnet-telemetry" }
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
tracing = "0.1"
blake3 = "1.5"
