[package]
name = "pqcnet-crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Lightweight crypto helpers shared by pqcnet binaries"
homepage = "https://example.com/pqcnet"
repository = "https://example.com/pqcnet/repo"

[features]
dev = []
test = []
prod = []
default = ["prod"]

[dependencies]
hex = "0.4"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
