[package]
name = "pqcnet-entropy"
version = "0.1.0"
edition = "2021"
description = "Shared entropy traits and host-import bridges for Autheo PQCNet crates"
license = "Apache-2.0 OR MIT"

[features]
default = []
sim = []

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.2"

[[example]]
name = "production_entropy"
path = "examples/production_entropy.rs"
