[package]
name = "pqcnet-networking"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "In-memory networking facade used by pqcnet binaries"
homepage = "https://example.com/pqcnet"
repository = "https://example.com/pqcnet/repo"

[features]
dev = []
test = []
prod = []
default = ["prod"]

[dependencies]
autheo-pqc-core = { path = "../autheo-pqc-core" }
autheo-pqcnet-5dqeh = { path = "../autheo-pqcnet-5dqeh" }
pqcnet-qs-dag = { path = "../pqcnet-qs-dag" }
pqcnet-qstp = { path = "../pqcnet-qstp" }
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
