[package]
name = "pqcnet-sentry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Reference sentry process for pqcnet demos"
homepage = "https://example.com/pqcnet"
repository = "https://example.com/pqcnet/repo"

[features]
dev = [
    "pqcnet-crypto/dev",
    "pqcnet-networking/dev",
    "pqcnet-telemetry/dev",
]
test = [
    "pqcnet-crypto/test",
    "pqcnet-networking/test",
    "pqcnet-telemetry/test",
]
prod = [
    "pqcnet-crypto/prod",
    "pqcnet-networking/prod",
    "pqcnet-telemetry/prod",
]
default = ["prod"]

[dependencies]
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
pqcnet-crypto = { path = "../pqcnet-crypto" }
pqcnet-networking = { path = "../pqcnet-networking" }
pqcnet-telemetry = { path = "../pqcnet-telemetry" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
toml = "0.8"
